--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -10,13 +10,13 @@
 
 advanced {
     # 启用后，搜索框会被移动至底部居中的位置。 [default: false]
-    B:centerSearchBarEnabled=false
+    B:centerSearchBarEnabled=true
     B:debugModeEnabled=false
 
     # 选择 JEI 会直接将物品移入物品栏或是用鼠标将其捡起。
     # [默认: mouse_pickup]
     # [有效: [inventory, mouse_pickup]]
-    S:giveMode=MOUSE_PICKUP
+    S:giveMode=inventory
 
     # 输入物品列表的最大宽度。 [range: 4 ~ 100, default: 100]
     I:maxColumns=100
