fuck config last

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ $ cat .gitignore
 /.config/ThermalTinkering/moltenFluids.txt
 /.config/brandon3055/contributors.json
 config/AE2Stuff/readme.txt
+config/InvTweaks.cfg
