--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -8,17 +8,10 @@ world1544803905 {
 
 
 world3556498 {
-    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
-
-    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=true
-
-    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
     S:filterText=@thaum sui
-
-    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
@@ -32,7 +25,7 @@ world805325770 {
 
     # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@thau shuij
+    S:filterText=lyf
 
     # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
