--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -7,28 +7,13 @@
 ##########################################################################################################
 
 client {
-    # Color of the border of the box (0 to disable) [default: ff999999]
-    S:boxBorderColor=ff999999
-
-    # The distance to the bottom side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: -1]
+    S:boxBorderColor=0
     I:boxBottomY=-1
-
-    # Color of the box (0 to disable) [default: 55006699]
-    S:boxFillColor=55006699
-
-    # The distance to the left side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
-    I:boxLeftX=5
-
-    # How much the border should be offset (i.e. to create an 'outer' border) [range: 0 ~ 20, default: 0]
+    S:boxFillColor=0
+    I:boxLeftX=-1
     I:boxOffset=0
-
-    # The distance to the right side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: -1]
     I:boxRightX=-1
-
-    # Thickness of the border of the box (0 to disable) [range: 0 ~ 20, default: 2]
-    I:boxThickness=2
-
-    # The distance to the top side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
+    I:boxThickness=0
     I:boxTopY=5
 
     # Color of the border of the chest contents box (0 to disable) [default: ff006699]
@@ -54,39 +39,17 @@ client {
 
     # If true show liquid information when the probe hits liquid first [default: false]
     B:showLiquids=false
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: red,bold]
     S:textStyleError=red,bold
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleInfo=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: blue]
     S:textStyleInfoImportant=blue
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: gray]
     S:textStyleLabel=gray
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: blue,italic]
     S:textStyleModName=blue,italic
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleName=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: gray,strikethrough]
     S:textStyleObsolete=gray,strikethrough
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: green]
     S:textStyleOk=green
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: white]
     S:textStyleProgress=white
-
-    # Text style. Use a comma delimited list with colors like: 'red', 'green', 'blue', ... or style codes like 'underline', 'bold', 'italic', 'strikethrough', ... [default: yellow]
     S:textStyleWarning=yellow
-
-    # The scale of the tooltips, 1 is default, 2 is smaller [range: 0.4 ~ 5.0, default: 1.0]
-    S:tooltipScale=1.0
+    S:tooltipScale=1.2000000476837158
 }
 
 
@@ -124,7 +87,7 @@ providers {
         topaddons:vanilla
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [thermalexpansion.topplugin], [enderio:default], [tconstruct:casting], [tconstruct:progress], [bonsaitrees:default], [compactmachines3:default], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [pneumaticcraft:default], [topaddons:ic2], [topaddons:base], [topaddons:bloodmagic], [topaddons:extrautils2], [topaddons:forestry], [topaddons:mysticalagriculture], [topaddons:storagedrawers], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [cookingforblockheads], [mekanism]]
+    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [thermalexpansion.topplugin], [enderio:default], [tconstruct:casting], [tconstruct:progress], [bonsaitrees:default], [compactmachines3:default], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [inspirations:cauldron], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [pneumaticcraft:default], [topaddons:ic2], [topaddons:base], [topaddons:bloodmagic], [topaddons:extrautils2], [topaddons:forestry], [topaddons:mysticalagriculture], [topaddons:storagedrawers], [topaddons:thermaldynamics], [topaddons:thermalexpansion], [topaddons:tconstruct], [topaddons:vanilla], [cookingforblockheads], [mekanism]]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -190,9 +153,7 @@ theoneprobe {
 
     # The maximum packet size to send an itemstack from client to server. Reduce this if you have issues with network lag caused by TOP [range: -1 ~ 32768, default: 20000]
     I:maxPacketToServer=20000
-
-    # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
-    I:needsProbe=3
+    I:needsProbe=0
 
     # Distance at which the probe works [range: 0.1 ~ 200.0, default: 6.0]
     S:probeDistance=6.0
