--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ $ cat .gitignore
 /.config/jei/worldSettings.cfg
 /.scripts/ContentTweaker/Isolated_Crystal_Unofficial/ICU_Item.zs
 config/AE2Stuff/readme.txt
+scripts/.zsrc
+config/
