开局事件实现

--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,2 +1,1 @@
-T:{id:"minecraft:stained_glass",Count:1b,Damage:4s}
-T:{id:"minecraft:glass_bottle",Count:1b,Damage:0s}
+T:{id:"minecraft:glass",Count:1b,Damage:0s}
