--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -16,7 +16,7 @@ world868573024 {
 
     # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=@cont p
+    S:filterText=
 
     # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
