--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,11 @@
       "required": true
     },
     {
+      "projectID": 271740,
+      "fileID": 2707353,
+      "required": true
+    },
+    {
       "projectID": 228815,
       "fileID": 2699055,
       "required": true
@@ -59,6 +64,11 @@
       "required": true
     },
     {
+      "projectID": 227443,
+      "fileID": 2920505,
+      "required": true
+    },
+    {
       "projectID": 236307,
       "fileID": 3053012,
       "required": true
@@ -66,6 +76,16 @@
     {
       "projectID": 223565,
       "fileID": 3051542,
+      "required": true
+    },
+    {
+      "projectID": 247111,
+      "fileID": 2887479,
+      "required": true
+    },
+    {
+      "projectID": 311378,
+      "fileID": 3014173,
       "required": true
     },
     {
@@ -89,6 +109,11 @@
       "required": true
     },
     {
+      "projectID": 223852,
+      "fileID": 2952606,
+      "required": true
+    },
+    {
       "projectID": 311938,
       "fileID": 2683267,
       "required": true
@@ -96,6 +121,11 @@
     {
       "projectID": 64578,
       "fileID": 3124452,
+      "required": true
+    },
+    {
+      "projectID": 254602,
+      "fileID": 2891841,
       "required": true
     },
     {
@@ -139,8 +169,28 @@
       "required": true
     },
     {
+      "projectID": 291737,
+      "fileID": 2920441,
+      "required": true
+    },
+    {
+      "projectID": 245480,
+      "fileID": 2691542,
+      "required": true
+    },
+    {
+      "projectID": 245211,
+      "fileID": 2667280,
+      "required": true
+    },
+    {
       "projectID": 232758,
       "fileID": 3159497,
+      "required": true
+    },
+    {
+      "projectID": 401178,
+      "fileID": 3294440,
       "required": true
     },
     {
@@ -164,13 +214,33 @@
       "required": true
     },
     {
+      "projectID": 223628,
+      "fileID": 2629023,
+      "required": true
+    },
+    {
+      "projectID": 239418,
+      "fileID": 2645156,
+      "required": true
+    },
+    {
       "projectID": 242195,
       "fileID": 2664235,
       "required": true
     },
     {
+      "projectID": 271835,
+      "fileID": 2920437,
+      "required": true
+    },
+    {
       "projectID": 232502,
       "fileID": 2391198,
+      "required": true
+    },
+    {
+      "projectID": 226410,
+      "fileID": 2702991,
       "required": true
     },
     {
@@ -184,8 +254,18 @@
       "required": true
     },
     {
+      "projectID": 297878,
+      "fileID": 2767592,
+      "required": true
+    },
+    {
       "projectID": 271009,
       "fileID": 2863246,
+      "required": true
+    },
+    {
+      "projectID": 291786,
+      "fileID": 2701203,
       "required": true
     },
     {
@@ -209,6 +289,11 @@
       "required": true
     },
     {
+      "projectID": 74072,
+      "fileID": 2902483,
+      "required": true
+    },
+    {
       "projectID": 233071,
       "fileID": 2562139,
       "required": true
@@ -216,6 +301,11 @@
     {
       "projectID": 224218,
       "fileID": 2707509,
+      "required": true
+    },
+    {
+      "projectID": 283777,
+      "fileID": 2780626,
       "required": true
     },
     {
@@ -239,8 +329,18 @@
       "required": true
     },
     {
+      "projectID": 226447,
+      "fileID": 2477566,
+      "required": true
+    },
+    {
       "projectID": 70496,
       "fileID": 2518031,
+      "required": true
+    },
+    {
+      "projectID": 281849,
+      "fileID": 2978408,
       "required": true
     },
     {
@@ -264,6 +364,11 @@
       "required": true
     },
     {
+      "projectID": 270789,
+      "fileID": 2920436,
+      "required": true
+    },
+    {
       "projectID": 270790,
       "fileID": 2761302,
       "required": true
@@ -276,6 +381,11 @@
     {
       "projectID": 242818,
       "fileID": 2779848,
+      "required": true
+    },
+    {
+      "projectID": 222880,
+      "fileID": 2926428,
       "required": true
     },
     {
@@ -304,8 +414,8 @@
       "required": true
     },
     {
-      "projectID": 246996,
-      "fileID": 2722575,
+      "projectID": 231484,
+      "fileID": 2862651,
       "required": true
     },
     {
@@ -314,8 +424,18 @@
       "required": true
     },
     {
-      "projectID": 231484,
-      "fileID": 2862651,
+      "projectID": 246996,
+      "fileID": 2722575,
+      "required": true
+    },
+    {
+      "projectID": 69163,
+      "fileID": 2926431,
+      "required": true
+    },
+    {
+      "projectID": 336748,
+      "fileID": 3218640,
       "required": true
     },
     {
@@ -329,13 +449,13 @@
       "required": true
     },
     {
-      "projectID": 59751,
-      "fileID": 2918418,
+      "projectID": 223735,
+      "fileID": 2590277,
       "required": true
     },
     {
-      "projectID": 223735,
-      "fileID": 2590277,
+      "projectID": 59751,
+      "fileID": 2918418,
       "required": true
     },
     {
@@ -346,6 +466,11 @@
     {
       "projectID": 271384,
       "fileID": 2920434,
+      "required": true
+    },
+    {
+      "projectID": 251718,
+      "fileID": 2684043,
       "required": true
     },
     {
@@ -369,13 +494,13 @@
       "required": true
     },
     {
-      "projectID": 311846,
-      "fileID": 2666979,
+      "projectID": 296057,
+      "fileID": 2573063,
       "required": true
     },
     {
-      "projectID": 296057,
-      "fileID": 2573063,
+      "projectID": 311846,
+      "fileID": 2666979,
       "required": true
     },
     {
@@ -389,6 +514,11 @@
       "required": true
     },
     {
+      "projectID": 278611,
+      "fileID": 2648904,
+      "required": true
+    },
+    {
       "projectID": 237065,
       "fileID": 2652853,
       "required": true
@@ -396,6 +526,11 @@
     {
       "projectID": 229587,
       "fileID": 2698688,
+      "required": true
+    },
+    {
+      "projectID": 246764,
+      "fileID": 2452234,
       "required": true
     },
     {
@@ -414,13 +549,13 @@
       "required": true
     },
     {
-      "projectID": 60089,
-      "fileID": 2671937,
+      "projectID": 221857,
+      "fileID": 2904825,
       "required": true
     },
     {
-      "projectID": 221857,
-      "fileID": 2904825,
+      "projectID": 60089,
+      "fileID": 2671937,
       "required": true
     },
     {
@@ -429,13 +564,13 @@
       "required": true
     },
     {
-      "projectID": 236542,
-      "fileID": 3305757,
+      "projectID": 248453,
+      "fileID": 2785465,
       "required": true
     },
     {
-      "projectID": 248453,
-      "fileID": 2785465,
+      "projectID": 236542,
+      "fileID": 3305757,
       "required": true
     },
     {
@@ -456,6 +591,31 @@
     {
       "projectID": 250398,
       "fileID": 2731319,
+      "required": true
+    },
+    {
+      "projectID": 250957,
+      "fileID": 2630860,
+      "required": true
+    },
+    {
+      "projectID": 292785,
+      "fileID": 2915154,
+      "required": true
+    },
+    {
+      "projectID": 283644,
+      "fileID": 2694382,
+      "required": true
+    },
+    {
+      "projectID": 70631,
+      "fileID": 2939416,
+      "required": true
+    },
+    {
+      "projectID": 251792,
+      "fileID": 3214953,
       "required": true
     }
   ],
