--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,30 @@
-!/.minecraft/patchouli_books
+#Whitelist
+/*
+!/.minecraft
+/.minecraft/*
+
+#repo stuff
+!/.gtihub
+!/docs
+!/artifacts
+!/runners
+!/LICENSE
+!/README.md
+!/CHANGELOG
+!/build.sh
+!/icon.png
+!/.gitignore
+
+#other stuff
+/.minecraft/scripts/.zsrc
 !/.minecraft/resources
 !/.minecraft/scripts
-/.minecraftscripts/nc_script_addons
+/.minecraft/scripts/nc_script_addons/*
 !/.minecraft/structures
 
+#pack stuff
 /instance.cfg
 /mmc-pack.json
 !/modlist.html
 !/manifest.json
-/icon.png
-.minecraft/mods/
+!/.minecraft/icon.png
