--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -7,11 +7,9 @@ world1544803905 {
 }
 
 
-world868573024 {
+world805325770 {
     # 在打开的 GUI 一侧显示书签列表。
-    B:bookmarkOverlayEnabled=false
-
-    # 给予物品而非显示其配方。
+    B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
 
     # 在列表中点击物品以隐藏或取消隐藏。
@@ -19,6 +17,15 @@ world868573024 {
     S:filterText=
 
     # 在打开的 GUI 一侧显示物品列表。
+    B:overlayEnabled=true
+}
+
+
+world868573024 {
+    B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
