--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
-!/.minecraft/patchouli_books
+#Whitelist
+/*
+!/.minecraft
+/.minecraft/*
+
+#repo stuff
+!/.gtihub
+!/docs
+!/artifacts
+!/runners
+!/LICENSE
+!/README.md
+!/CHANGELOG
+!/build.sh
+!/icon.png
+!/.gitignore
+
+#other stuff
+/.minecraft/scripts/.zsrc
 !/.minecraft/resources
 !/.minecraft/scripts
+/.minecraft/scripts/nc_script_addons/*
+!/.minecraft/structures
 
+#pack stuff
 /instance.cfg
 /mmc-pack.json
 !/modlist.html
 !/manifest.json
-/icon.png
-.minecraft/mods/
-.minecraft/local/
-.minecraft/logs/
-.minecraft/saves/
-.minecraft/resourcepacks/
-.minecraft/screenshots/
-.minecraft/backups/
-.minecraft/.mixin.out/
-.minecraft/usernamecache.json
-.minecraft/usercache.json
-.minecraft/randomtweaker.prop
-.minecraft/patchouli_data.json
-.minecraft/options.txt
-.minecraft/icon.png
-.minecraft/crafttweaker.log
-.minecraft/BotaniaVars.dat
+!/.minecraft/icon.png
