--- a/.minecraft/config/randomtweaker.cfg
+++ b/.minecraft/config/randomtweaker.cfg
@@ -1,10 +1,19 @@
 # Configuration file
 
 general {
-    # If true, The original DreamJournal will be no longer available.
+    # If true, The original DreamJournal will be no longer available. [default: false]
     B:DreamJournal=true
 
-    # If true, Allow CrT to manipulate the file "randomtweaker.prop".
+    # If true, the hydroangeas won't decay. [Valid only for modified results | default: true]
+    B:HydroangeasDecay=true
+
+    # How much mana is max of hydroangeas? [Valid only for modified results | default: 18000]
+    I:HydroangeasMaxMana=18000
+
+    # If true, the hydroangeas will not be modified. [default: false]
+    B:HydroangeasModified=false
+
+    # If true, Allow CrT to manipulate the file "randomtweaker.prop". [default: true]
     B:Prop=true
 }
 
