--- a/.minecraft/config/splash.properties
+++ b/.minecraft/config/splash.properties
@@ -1,21 +1,20 @@
 #Splash screen properties
-<<<<<<< HEAD
-#Tue May 25 22:14:31 CST 2021
-=======
-#Mon May 24 11:35:49 CST 2021
->>>>>>> 82b6b63f7794a90c768d1abf2ae4de805753f4b6
-background=0xFFFFFF
-memoryGood=0x78CB34
-font=0x0
-barBackground=0xFFFFFF
-barBorder=0xC0C0C0
-memoryLow=0xE42F2F
-rotate=false
-memoryWarn=0xE6E84A
-showMemory=true
-bar=0xCB3D35
-enabled=true
-resourcePackPath=resources
+#Wed May 26 15:19:28 CST 2021
 logoOffset=0
+barBackground=0xFFFFFF
+memoryGood=0x78CB34
+showMemory=true
+enabled=true
+>>>>>>>=82b6b63f7794a90c768d1abf2ae4de805753f4b6
 forgeTexture=fml\:textures/gui/forge.png
+<<<<<<<=HEAD
+font=0x0
+memoryLow=0xE42F2F
+memoryWarn=0xE6E84A
+rotate=false
+background=0xFFFFFF
+bar=0xCB3D35
+resourcePackPath=resources
+barBorder=0xC0C0C0
 fontTexture=textures/font/ascii.png
+=\=\=\=\=\=\=
