--- a/.minecraft/config/smoothfont/smoothfont.cfg
+++ b/.minecraft/config/smoothfont/smoothfont.cfg
@@ -106,11 +106,11 @@ debug {
 
 font {
     # Use the fonts installed in the operating system.
-    B:useOSFont=false
+    B:useOSFont=true
 
     # Primary font name.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
-    S:fontName=SansSerif
+    S:fontName=微软雅黑
 
     # Secondary font name. It is used if the character cannot be rendered with the primary font.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
