--- a/.minecraft/config/JAOPCA.cfg
+++ b/.minecraft/config/JAOPCA.cfg
@@ -982,6 +982,9 @@ titanium {
 
 
 uranium {
+    # The color for this material.
+    S:color=0x88bb78
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
