Create explode.zs and Fix opening.zs

--- a/.minecraft/config/jei/bookmarks.ini
+++ b/.minecraft/config/jei/bookmarks.ini
@@ -1,1 +1,1 @@
-T:{id:"botania:tinypotato",Count:1b,Damage:0s}
+T:{ForgeCaps:{"astralsorcery:cap_item_amulet_holder":{}},id:"thaumcraft:thaumometer",Count:1b,Damage:0s}
