--- a/.minecraft/config/Probe.cfg
+++ b/.minecraft/config/Probe.cfg
@@ -10,7 +10,7 @@ general {
     B:enableOreDictionary=true
     B:enableZenPackage=true
     B:enableZenType=true
-    B:setPrettyPrinting=false
+    B:setPrettyPrinting=true
 }
 
 
