优化部分脚本 删除大部分 ref 机器 修整已完成的炼钢部分

--- a/.minecraft/config/JAOPCA.cfg
+++ b/.minecraft/config/JAOPCA.cfg
@@ -34,6 +34,9 @@ aluminium {
 
 
 amber {
+    # The color for this material.
+    S:color=0xffcd5c
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -63,6 +66,9 @@ amber {
 
 
 apatite {
+    # The color for this material.
+    S:color=0x70cdff
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -92,6 +98,9 @@ apatite {
 
 
 aquamarine {
+    # The color for this material.
+    S:color=0xb2ff
+
     # The byproduct XML string for this ore in the SAG Mill. Refer to Ender IO. (Ender IO)
     S:enderIOByproductXml=name="oredict:cobblestone" amount="1" chance="0.15"
 
@@ -124,6 +133,9 @@ aquamarine {
 
 
 ardite {
+    # The color for this material.
+    S:color=0xd44d20
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -197,6 +209,9 @@ astral_starmetal {
 
 
 certus_quartz {
+    # The color for this material.
+    S:color=0xd6eeff
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -226,6 +241,9 @@ certus_quartz {
 
 
 charged_certus_quartz {
+    # The color for this material.
+    S:color=0xdcfeff
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -255,6 +273,9 @@ charged_certus_quartz {
 
 
 coal {
+    # The color for this material.
+    S:color=0x222222
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -284,6 +305,9 @@ coal {
 
 
 cobalt {
+    # The color for this material.
+    S:color=0x2a7ced
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -377,6 +401,9 @@ diamond {
 
 
 dilithium {
+    # The color for this material.
+    S:color=0xddcecb
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -610,6 +637,9 @@ jaopca {
 
 
 lapis {
+    # The color for this material.
+    S:color=0x4373f2
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -799,6 +829,9 @@ platinum {
 
 
 quartz {
+    # The color for this material.
+    S:color=0xfffaeb
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -828,6 +861,9 @@ quartz {
 
 
 quartz_black {
+    # The color for this material.
+    S:color=0x161514
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
