--- a/manifest.json
+++ b/manifest.json
@@ -574,6 +574,11 @@
       "required": true
     },
     {
+      "projectID": 297878,
+      "fileID": 3065647,
+      "required": true
+    },
+    {
       "projectID": 237167,
       "fileID": 2985811,
       "required": true
