--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -7,7 +7,7 @@ world1544803905 {
 }
 
 
-world737388836 {
+world48760043 {
     # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
 
@@ -19,6 +19,15 @@ world737388836 {
     S:filterText=
 
     # 在打开的 GUI 一侧显示物品列表。
+    B:overlayEnabled=true
+}
+
+
+world737388836 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=@cont 锻铁
     B:overlayEnabled=true
 }
 
