--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "IsolatedCrystalRemaker",
-  "version": "0.2.1",
+  "version": "2.1-Alpha",
   "author": "alstorfo, superhelo, douzi, ikexing, liuseniubi, GBLodb, friendlyhj, skyraah",
   "files": [
     {
