修复装水的碗 BUG

--- a/.minecraft/config/actuallyadditions.cfg
+++ b/.minecraft/config/actuallyadditions.cfg
@@ -181,7 +181,7 @@ other {
     B:"Village and Dungeon Loot"=true
 
     # Should right-clicking a bowl on water blocks create a water bowl?
-    B:"Water Bowl"=true
+    B:"Water Bowl"=false
 
     # Should the water bowl spill if you don't sneak while using it?
     B:"Water Bowl Spilling"=true
