启用 BotaniaTweaks 自带的一碗水

--- a/.minecraft/config/botaniatweaks.cfg
+++ b/.minecraft/config/botaniatweaks.cfg
@@ -150,7 +150,7 @@ etc {
     B:keepManaGenerationStatistics=false
 
     # Should the water bowl mechanic, where you right click on water with a bowl to create a filled bowl, be available outside of Garden of Glass mode? [default: false]
-    B:nonGogWaterBowl=false
+    B:nonGogWaterBowl=true
 
     # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: false]
     B:sheepEatCustomGrass=false
