添加三个优化 Mod

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "IsolatedCrystalRemaker",
-  "version": "2.1-Alpha",
-  "author": "alstorfo, superhelo, douzi, ikexing, liuseniubi, GBLodb, friendlyhj, skyraah",
+  "author": "",
   "files": [
     {
       "projectID": 285742,
@@ -220,6 +219,11 @@
       "required": true
     },
     {
+      "projectID": 357178,
+      "fileID": 3076610,
+      "required": true
+    },
+    {
       "projectID": 59751,
       "fileID": 2918418,
       "required": true
@@ -255,8 +259,18 @@
       "required": true
     },
     {
+      "projectID": 250290,
+      "fileID": 2665849,
+      "required": true
+    },
+    {
       "projectID": 303213,
       "fileID": 3084399,
+      "required": true
+    },
+    {
+      "projectID": 318255,
+      "fileID": 2747710,
       "required": true
     },
     {
@@ -301,7 +315,7 @@
     },
     {
       "projectID": 239197,
-      "fileID": 3335030,
+      "fileID": 3348523,
       "required": true
     },
     {
@@ -405,23 +419,23 @@
       "required": true
     },
     {
-      "projectID": 250398,
-      "fileID": 3025548,
-      "required": true
-    },
-    {
       "projectID": 226447,
       "fileID": 2477566,
       "required": true
     },
     {
-      "projectID": 250957,
-      "fileID": 2630860,
+      "projectID": 250398,
+      "fileID": 3025548,
       "required": true
     },
     {
       "projectID": 271009,
       "fileID": 2863246,
+      "required": true
+    },
+    {
+      "projectID": 250957,
+      "fileID": 2630860,
       "required": true
     },
     {
@@ -435,23 +449,23 @@
       "required": true
     },
     {
-      "projectID": 336748,
-      "fileID": 3218640,
-      "required": true
-    },
-    {
       "projectID": 224791,
       "fileID": 2822288,
       "required": true
     },
     {
-      "projectID": 289412,
-      "fileID": 3156637,
+      "projectID": 336748,
+      "fileID": 3218640,
       "required": true
     },
     {
       "projectID": 231484,
       "fileID": 2862651,
+      "required": true
+    },
+    {
+      "projectID": 289412,
+      "fileID": 3156637,
       "required": true
     },
     {
@@ -475,13 +489,13 @@
       "required": true
     },
     {
-      "projectID": 247111,
-      "fileID": 2887479,
+      "projectID": 292785,
+      "fileID": 2915154,
       "required": true
     },
     {
-      "projectID": 292785,
-      "fileID": 2915154,
+      "projectID": 247111,
+      "fileID": 2887479,
       "required": true
     },
     {
@@ -490,13 +504,13 @@
       "required": true
     },
     {
-      "projectID": 238761,
-      "fileID": 2700554,
+      "projectID": 248787,
+      "fileID": 2987247,
       "required": true
     },
     {
-      "projectID": 248787,
-      "fileID": 2987247,
+      "projectID": 238761,
+      "fileID": 2700554,
       "required": true
     },
     {
@@ -505,28 +519,28 @@
       "required": true
     },
     {
-      "projectID": 245453,
-      "fileID": 2691536,
-      "required": true
-    },
-    {
       "projectID": 236541,
       "fileID": 3261667,
       "required": true
     },
     {
-      "projectID": 236542,
-      "fileID": 3305757,
+      "projectID": 245453,
+      "fileID": 2691536,
       "required": true
     },
     {
-      "projectID": 230976,
-      "fileID": 2463272,
+      "projectID": 236542,
+      "fileID": 3347618,
       "required": true
     },
     {
       "projectID": 223735,
       "fileID": 2914062,
+      "required": true
+    },
+    {
+      "projectID": 230976,
+      "fileID": 2463272,
       "required": true
     },
     {
@@ -590,13 +604,18 @@
       "required": true
     },
     {
+      "projectID": 246640,
+      "fileID": 2704562,
+      "required": true
+    },
+    {
       "projectID": 228816,
       "fileID": 2699056,
       "required": true
     },
     {
-      "projectID": 246640,
-      "fileID": 2704562,
+      "projectID": 354143,
+      "fileID": 2939052,
       "required": true
     },
     {
@@ -710,13 +729,13 @@
       "required": true
     },
     {
-      "projectID": 64578,
-      "fileID": 3328811,
+      "projectID": 242818,
+      "fileID": 2779848,
       "required": true
     },
     {
-      "projectID": 242818,
-      "fileID": 2779848,
+      "projectID": 64578,
+      "fileID": 3328811,
       "required": true
     },
     {
