更新 Mod 配置文件

--- a/.minecraft/config/environmentaltech/main.cfg
+++ b/.minecraft/config/environmentaltech/main.cfg
@@ -4,7 +4,7 @@ environmentaltech {
 
     guide {
         # Is Module Enabled? [default: true]
-        B:enabled=true
+        B:enabled=false
     }
 
     resources {
