--- a/.minecraft/config/forestry/common.cfg
+++ b/.minecraft/config/forestry/common.cfg
@@ -4,7 +4,7 @@
 
 crafting {
     # 开启青铜的合成表。 [default: true]
-    B:bronze=true
+    B:bronze=false
 
     stamps {
         # 禁止某种邮票的合成表。 [default: [20n, 50n, 100n]] [valid: [1n, 2n, 5n, 10n, 20n, 50n, 100n]]
@@ -212,7 +212,7 @@ tweaks {
 
     book {
         # 启用后，首次加入游戏的玩家会获得林业员手册。 [default: true]
-        B:spawn=true
+        B:spawn=false
     }
 
 }
@@ -274,17 +274,17 @@ world {
 
         ore {
             # 生世界中生成磷灰石。 [default: true]
-            B:apatite=true
+            B:apatite=false
 
             # 在世界中生成铜矿。 [default: true]
-            B:copper=true
+            B:copper=false
             I:dimBlacklist <
              >
             I:dimWhitelist <
              >
 
             # 在世界中生成锡矿。 [default: true]
-            B:tin=true
+            B:tin=false
         }
 
     }
