--- a/.minecraft/config/tconstruct.cfg
+++ b/.minecraft/config/tconstruct.cfg
@@ -100,7 +100,7 @@ gameplay {
     B:reuseStencils=true
 
     # Players who enter the world for the first time get a Tinkers' Book
-    B:spawnWithBook=true
+    B:spawnWithBook=false
 
     # REQUIRES DEBUG MODULE. Tests all IMC integrations with dummy recipes. May significantly impact gameplay, so its advised you disable this outside of dev environements.
     B:testIMC=false
@@ -130,10 +130,10 @@ worldgen {
     B:slimeIslandsOnlyGenerateInSurfaceWorlds=true
 
     # If true, cobalt ore will generate in the nether
-    B:genCobalt=true
+    B:genCobalt=false
 
     # If true, ardite ore will generate in the nether
-    B:genArdite=true
+    B:genArdite=false
 
     # Approx Ores per chunk
     I:cobaltRate=20
