--- a/.minecraft/config/openblocks.cfg
+++ b/.minecraft/config/openblocks.cfg
@@ -6,7 +6,7 @@ additional {
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
-    B:dumpDeadPlayersInventories=true
+    B:dumpDeadPlayersInventories=false
 }
 
 
@@ -207,7 +207,7 @@ features {
     B:flimFlamEnchantment=true
 
     # Should every player get info book on first login
-    B:infoBook=true
+    B:infoBook=false
 
     # Is 'Last Stand' enchantment enabled
     B:lastStandEnchantment=true
