--- a/manifest.json
+++ b/manifest.json
@@ -174,6 +174,11 @@
       "required": true
     },
     {
+      "projectID": 280294,
+      "fileID": 3362160,
+      "required": true
+    },
+    {
       "projectID": 271384,
       "fileID": 2920434,
       "required": true
@@ -210,7 +215,7 @@
     },
     {
       "projectID": 401178,
-      "fileID": 3334796,
+      "fileID": 3356138,
       "required": true
     },
     {
@@ -260,7 +265,7 @@
     },
     {
       "projectID": 250290,
-      "fileID": 2665849,
+      "fileID": 2916357,
       "required": true
     },
     {
@@ -270,7 +275,7 @@
     },
     {
       "projectID": 318255,
-      "fileID": 2747710,
+      "fileID": 2919497,
       "required": true
     },
     {
@@ -315,7 +320,7 @@
     },
     {
       "projectID": 239197,
-      "fileID": 3348523,
+      "fileID": 3357049,
       "required": true
     },
     {
@@ -685,7 +690,7 @@
     },
     {
       "projectID": 60089,
-      "fileID": 2671937,
+      "fileID": 3359843,
       "required": true
     },
     {
