--- a/.minecraft/config/randomtweaker.cfg
+++ b/.minecraft/config/randomtweaker.cfg
@@ -3,7 +3,7 @@
 general {
 
     randomtweaker {
-        # If true, when entering a world for the first time, it will generate a value of OriginalSanity randomly. [default : true]
+        # If true, when entering a world for the first time, it will generate a value of OriginalSanity randomly. Otherwise, it is based on 100. [default : true]
         B:OriginalSanity=false
 
         # If true, the sanity function will be enabled. [default : false]
@@ -29,7 +29,7 @@ general {
         # How much mana is max of hydroangeas? [Valid only for modified results | default: 18000]
         I:HydroangeasMaxMana=18000
 
-        # If true, the hydroangeas will not be modified. [default: true]
+        # If true, the hydroangeas will be modified. [default: false]
         B:HydroangeasModified=false
     }
 
@@ -46,6 +46,26 @@ general {
     ftbultimine {
         # If true, Allow Crt to Control the FTBUltimine enable
         B:AllowCrTControl=false
+    }
+
+    toughasnails {
+        # If true, cancel Temperature when the player transforms into a android. [default: true]
+        B:AndroidTemperature=true
+
+        # If true, cancel Thirst when the player transforms into a android. [default: true]
+        B:AndroidThirst=true
+
+        # If 'B: AndroidThirst' false, Select the skill you need to unlock to cancel your Temperature. [default: 14 [0-21]]
+        I:SelectedStatTemperature=14
+
+        # If 'B: AndroidThirst' false, Select the skill you need to unlock to cancel your Thirst. [default: 6 [0-21]]
+        I:SelectedStatThirst=6
+
+        # If true, enable 'B: SelectedStatTemperature'. [default: true]
+        B:SelectedStatsTemperature=false
+
+        # If true, enable 'B: SelectedStatThirst'. [default: true]
+        B:SelectedStatsThirst=false
     }
 
 }
