为各脚本添加优先级优化一些代码逻辑

--- a/.minecraft/config/JAOPCA.cfg
+++ b/.minecraft/config/JAOPCA.cfg
@@ -1,6 +1,8 @@
 # Configuration file
 
 aluminium {
+    S:color=0xd0e2e5
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -34,7 +36,6 @@ aluminium {
 
 
 amber {
-    # The color for this material.
     S:color=0xffcd5c
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -66,7 +67,6 @@ amber {
 
 
 apatite {
-    # The color for this material.
     S:color=0x70cdff
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -98,7 +98,6 @@ apatite {
 
 
 aquamarine {
-    # The color for this material.
     S:color=0xb2ff
 
     # The byproduct XML string for this ore in the SAG Mill. Refer to Ender IO. (Ender IO)
@@ -133,7 +132,6 @@ aquamarine {
 
 
 ardite {
-    # The color for this material.
     S:color=0xd44d20
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -209,7 +207,6 @@ astral_starmetal {
 
 
 certus_quartz {
-    # The color for this material.
     S:color=0xd6eeff
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -241,7 +238,6 @@ certus_quartz {
 
 
 charged_certus_quartz {
-    # The color for this material.
     S:color=0xdcfeff
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -273,7 +269,6 @@ charged_certus_quartz {
 
 
 coal {
-    # The color for this material.
     S:color=0x222222
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -305,7 +300,6 @@ coal {
 
 
 cobalt {
-    # The color for this material.
     S:color=0x2a7ced
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -343,6 +337,8 @@ cobalt {
 
 
 copper {
+    S:color=0xdf8c52
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -372,6 +368,8 @@ copper {
 
 
 diamond {
+    S:color=0xa9f4eb
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -401,7 +399,6 @@ diamond {
 
 
 dilithium {
-    # The color for this material.
     S:color=0xddcecb
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -468,6 +465,8 @@ draconium {
 
 
 emerald {
+    S:color=0x73ff9d
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -497,6 +496,8 @@ emerald {
 
 
 gold {
+    S:color=0xffff7a
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -526,6 +527,8 @@ gold {
 
 
 iridium {
+    S:color=0xefeee8
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -558,6 +561,8 @@ iridium {
 
 
 iron {
+    S:color=0xd3d3d3
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -637,7 +642,6 @@ jaopca {
 
 
 lapis {
-    # The color for this material.
     S:color=0x4373f2
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -669,6 +673,8 @@ lapis {
 
 
 lead {
+    S:color=0x939ca4
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -733,6 +739,8 @@ mithril {
 
 
 nickel {
+    S:color=0xe6e9c8
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -797,6 +805,8 @@ osmium {
 
 
 platinum {
+    S:color=0xc2ffff
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -829,7 +839,6 @@ platinum {
 
 
 quartz {
-    # The color for this material.
     S:color=0xfffaeb
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -861,7 +870,6 @@ quartz {
 
 
 quartz_black {
-    # The color for this material.
     S:color=0x161514
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -893,6 +901,8 @@ quartz_black {
 
 
 redstone {
+    S:color=0x930000
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -922,6 +932,8 @@ redstone {
 
 
 silver {
+    S:color=0xe8f3f6
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -951,6 +963,8 @@ silver {
 
 
 tin {
+    S:color=0xe7eef1
+
     # The energy modifier of this material. Used to calculated energy costs.
     D:energyModifier=1.0
 
@@ -1017,8 +1031,45 @@ titanium {
 }
 
 
-uranium {
+tritanium {
     # The color for this material.
+    S:color=0x70868c
+
+    # The energy modifier of this material. Used to calculated energy costs.
+    D:energyModifier=1.0
+
+    # The main byproduct material for this material.
+    S:extra=Tritanium
+
+    # The secondary byproduct material for this material.
+    S:extra2=Tritanium
+
+    # The tertiary byproduct material for this material.
+    S:extra3=Tritanium
+
+    # Does this material have a enchanted glow.
+    B:hasEffect=false
+
+    # Item to use when recreating the ore. (Mekanism)
+    S:mekanismBase=minecraft:cobblestone
+
+    # The module blacklist for this material. * will mean all modules.
+    S:moduleBlacklist <
+     >
+
+    # The rarity of this material. Used to calculate default chances.
+    D:rarity=1.0
+
+    # The synonyms for this ore to use for Ore Dictionary registration.
+    S:synonyms <
+     >
+
+    # Energy generated when the coin of this material is used in the Numismatic Dynamo. (Coin, Thermal Expansion)
+    I:teNumismValue=32000
+}
+
+
+uranium {
     S:color=0x88bb78
 
     # The energy modifier of this material. Used to calculated energy costs.
