--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 !/.minecraft/config/
 
 #repo stuff
-!/.gtihub
+!/.github
 !/docs
 !/README.md
 !/build.sh
@@ -21,6 +21,7 @@
 !/.minecraft/scripts
 !/.minecraft/structures
 !/.minecraft/oresources
+!/.minecraft/mods/randomtweaker*.jar
 
 #pack stuff
 /instance.cfg
@@ -28,3 +29,5 @@
 !/modlist.html
 !/manifest.json
 !/.minecraft/icon.png
+.minecraft/config/jei/bookmarks.ini
+.minecraft/config/jei/worldSettings.cfg
