--- a/.minecraft/config/botania.cfg
+++ b/.minecraft/config/botania.cfg
@@ -35,7 +35,7 @@ general {
     B:elfPortal.particles.enabled=true
 
     # Set to false to disable the ability for the Hand of Ender to pickpocket other players' ender chests.
-    B:enderPickpocket.enabled=true
+    B:enderPickpocket.enabled=false
 
     # Set this to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
     B:fallenKanade.enabled=true
@@ -44,7 +44,7 @@ general {
     B:fancySkybox.enable=true
 
     # Set this to true to enable the fancy skybox in non Garden of Glass worlds. (Does not require Garden of Glass loaded to use, needs 'fancySkybox.enable' to be true as well)
-    B:fancySkybox.normalWorlds=false
+    B:fancySkybox.normalWorlds=true
 
     # The height of the Flugel Tiara flight bar. You can change this if you have a mod that adds a bar in that spot.
     I:flightBar.height=49
