--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@
 
 #configs
 !/.minecraft/config/
+/.minecraft/config/jei/bookmarks.ini
+/.minecraft/config/jei/worldSettings.cfg
+/.minecraft/config/InvTweaks/InvTweaks.cfg
+/.minecraft/config/astralsorcery/amulet_enchantments.cfg
+/.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
+/.minecraft/config/AppliedEnergistics2/items.csv
+/.minecraft/config/AppliedEnergistics2/VersionChecker.cfg
+/.minecraft/config/thaumicjei_itemstack_aspects.json
+/.minecraft/config/splash.properties
 
 #repo stuff
 !/.github
@@ -29,5 +38,3 @@
 !/modlist.html
 !/manifest.json
 !/.minecraft/icon.png
-.minecraft/config/jei/bookmarks.ini
-.minecraft/config/jei/worldSettings.cfg
