--- a/.minecraft/config/JAOPCA.cfg
+++ b/.minecraft/config/JAOPCA.cfg
@@ -169,7 +169,6 @@ ardite {
 
 
 astral_starmetal {
-    # The color for this material.
     S:color=0x2d3a84
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -429,8 +428,36 @@ dilithium {
 }
 
 
+dimensional_shard {
+    # The energy modifier of this material. Used to calculated energy costs.
+    D:energyModifier=1.0
+
+    # The main byproduct material for this material.
+    S:extra=DimensionalShard
+
+    # The secondary byproduct material for this material.
+    S:extra2=DimensionalShard
+
+    # The tertiary byproduct material for this material.
+    S:extra3=DimensionalShard
+
+    # Does this material have a enchanted glow.
+    B:hasEffect=false
+
+    # The module blacklist for this material. * will mean all modules.
+    S:moduleBlacklist <
+     >
+
+    # The rarity of this material. Used to calculate default chances.
+    D:rarity=1.0
+
+    # The synonyms for this ore to use for Ore Dictionary registration.
+    S:synonyms <
+     >
+}
+
+
 draconium {
-    # The color for this material.
     S:color=0xb680ed
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -704,7 +731,6 @@ lead {
 
 
 mithril {
-    # The color for this material.
     S:color=0x7fbcda
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -770,7 +796,6 @@ nickel {
 
 
 osmium {
-    # The color for this material.
     S:color=0xd4e8fb
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -994,7 +1019,6 @@ tin {
 
 
 titanium {
-    # The color for this material.
     S:color=0xbaadf1
 
     # The energy modifier of this material. Used to calculated energy costs.
@@ -1032,7 +1056,6 @@ titanium {
 
 
 tritanium {
-    # The color for this material.
     S:color=0x70868c
 
     # The energy modifier of this material. Used to calculated energy costs.
