--- a/.minecraft/config/extendedcrafting.cfg
+++ b/.minecraft/config/extendedcrafting.cfg
@@ -7,6 +7,9 @@
 ##########################################################################################################
 
 automation_interface {
+    # Should the Automation Interface accept GTEU? [default: false]
+    B:accept_gteu=false
+
     # Should the Automation Interface be enabled? [default: true]
     B:enabled=true
 
@@ -28,6 +31,9 @@ automation_interface {
 ##########################################################################################################
 
 combination_crafting {
+    # Should the Crafting Core accept GTEU? [default: false]
+    B:accept_gteu=false
+
     # Should the Crafting Core and Pedestal be enabled? [default: true]
     B:enabled=true
 
@@ -76,12 +82,27 @@ general {
 
 
 ##########################################################################################################
+# gregtech
+#--------------------------------------------------------------------------------------------------------#
+# Settings for GregTech compatibility.
+##########################################################################################################
+
+gregtech {
+    # How much RF should one GTEU be handled as? [range: 1 ~ 2147483647, default: 4]
+    I:conversion=4
+}
+
+
+##########################################################################################################
 # quantum_compression
 #--------------------------------------------------------------------------------------------------------#
 # Settings for the Quantum Compressor.
 ##########################################################################################################
 
 quantum_compression {
+    # Should the Quantum Compressor accept GTEU? [default: false]
+    B:accept_gteu=false
+
     # Should the Quantum Compressor be enabled? [default: true]
     B:enabled=true
 
