--- a/.minecraft/config/jei/jei.cfg
+++ b/.minecraft/config/jei/jei.cfg
@@ -16,7 +16,7 @@ advanced {
     # 选择 JEI 会直接将物品移入物品栏或是用鼠标将其捡起。
     # [默认: mouse_pickup]
     # [有效: [inventory, mouse_pickup]]
-    S:giveMode=mouse_pickup
+    S:giveMode=inventory
 
     # 输入物品列表的最大宽度。 [range: 4 ~ 100, default: 100]
     I:maxColumns=100
@@ -42,12 +42,12 @@ search {
     # 当按物品颜色搜索时，要求使用 "^" 作为前缀
     # [默认: disabled]
     # [有效: [enabled, require_prefix, disabled]]
-    S:colorSearchMode=DISABLED
+    S:colorSearchMode=disabled
 
     # 当按创造标签页名搜索时，要求使用 "%" 作为前缀
     # [默认: disabled]
     # [有效: [enabled, require_prefix, disabled]]
-    S:creativeTabSearchMode=DISABLED
+    S:creativeTabSearchMode=disabled
 
     # 当按模组名称搜索时，要求使用 "@" 作为前缀
     # [默认: require_prefix]
@@ -57,12 +57,12 @@ search {
     # 当按矿物词典搜索时，要求使用 "$" 作为前缀
     # [默认: disabled]
     # [有效: [enabled, require_prefix, disabled]]
-    S:oreDictSearchMode=DISABLED
+    S:oreDictSearchMode=disabled
 
     # 当按资源 ID 搜索时，要求使用 "&" 作为前缀
     # [默认: disabled]
     # [有效: [enabled, require_prefix, disabled]]
-    S:resourceIdSearchMode=DISABLED
+    S:resourceIdSearchMode=disabled
 
     # 当按提示搜索时，要求使用 "#" 作为前缀
     # [默认: enabled]
