--- a/manifest.json
+++ b/manifest.json
@@ -104,6 +104,11 @@
       "required": true
     },
     {
+      "projectID": 250702,
+      "fileID": 3299405,
+      "required": true
+    },
+    {
       "projectID": 254602,
       "fileID": 3438487,
       "required": true
@@ -115,7 +120,7 @@
     },
     {
       "projectID": 514170,
-      "fileID": 3449738,
+      "fileID": 3460973,
       "required": true
     },
     {
@@ -236,6 +241,11 @@
     {
       "projectID": 261924,
       "fileID": 2733508,
+      "required": true
+    },
+    {
+      "projectID": 525389,
+      "fileID": 3456159,
       "required": true
     },
     {
@@ -600,7 +610,7 @@
     },
     {
       "projectID": 281657,
-      "fileID": 3447697,
+      "fileID": 3196507,
       "required": true
     },
     {
@@ -615,7 +625,7 @@
     },
     {
       "projectID": 236542,
-      "fileID": 3439023,
+      "fileID": 3456841,
       "required": true
     },
     {
@@ -836,6 +846,11 @@
     {
       "projectID": 272335,
       "fileID": 2645867,
+      "required": true
+    },
+    {
+      "projectID": 297404,
+      "fileID": 3043459,
       "required": true
     },
     {
